# zanella_project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  main.py  pyproject.toml  test_google_sheets.py
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: routes.py
app/common/logging/: custom_logger.py  logging_config.py
app/config/: config.yaml  settings.config.yaml
app/services/: __init__.py  example_service.py
app/services/config/: config_loader.py  config_models.py  config_service.py  env_variables.py
app/services/di/: container.py
app/services/google_sheets/: README.md  __init__.py  asset_allocation_parser.py  example_usage.py  google_sheets_service.py  models.py  test_models.py
docker/: Dockerfile  Dockerfile.prod  docker-compose.yml
git-templates/: pre-receive
tests/: test_app.py
