[project]
name = "zanella-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "google-api-python-client>=2.187.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.34.0",
    "gunicorn>=23.0.0",
    "pyyaml>=6.0.0",
    "python-json-logger>=3.2.1",
    "structlog>=25.5.0",
    "punq>=0.7.0",
    "pandas>=2.3.3",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "regex>=2025.11.3",
    "pytest>=9.0.1",
]
